welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (((a>0 && b<0) || (a<0 && b>0)) || negative=false)
                                           ^